--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body ng-app="starter">
 <ion-pane>
     <ion-header-bar class="bar-positive">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">Ionic Push Starter</h1>
     </ion-header-bar>
     <ion-nav-view>
     </ion-nav-view>
