--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <!-- your app's libraries -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="js/ionic-core.js"></script>
-    <script src="js/ionic-push.js"></script>
+    <script src="lib/ionic-service-core/ionic-core.js"></script>
+    <script src="lib/ionic-service-push/ionic-push.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
